# AudioVisualTranscription

./: .gitignore  .huggingface.yml  Dockerfile  LICENSE  README.md  app.py  install_linux.sh  install_macos.sh  pyproject.toml  requirements.txt
